--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 未知国家-723.3KB/s(Youtube:不良林), server: 104.19.3.17, port: 443, type: vmess, uuid: 9e6ceeff-2546-3690-ac00-6fcdf31dec94, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chcar, ws-headers: {Host: v2fly.samrt.website}}
-  - {name: 🇨🇳 中国-207.9KB/s(Youtube:不良林), server: 36.134.156.5, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇸🇬 新加坡-1.05MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-347.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 柬埔寨-3.54MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 444, type: trojan, password: eed5c3e1-2d36-4429-8795-2ed74d374f23, sni: kh1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-11.16MB/s(Youtube:不良林), server: node.sin.entrance.cyou, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: node.sin.entrance.cyou, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-455.1KB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-2.34MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-465.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林), server: kkytr01.kekeyun.xyz, port: 12813, type: trojan, password: befba3a2-2379-3e99-8063-46707c3e6e7a, sni: kkytr01.kekeyun.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.72MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.55MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-4.86MB/s(Youtube:不良林), server: 152.67.218.38, port: 443, type: vmess, uuid: b5e9480a-b7aa-40a4-f9a7-5299b5e363b4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.67.218.38}}
   - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: hk10.bp777.buzz, port: 21665, type: vmess, uuid: f3d0b694-ee53-4bfd-aa3c-add622430890, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk10.bp777.buzz}}
   - {name: 🇬🇧 英国-4.26MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-723.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-207.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.6KB/s(Youtube:不良林)
-      - 柬埔寨-3.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-455.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-465.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
       - 🇬🇧 英国-4.26MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 未知国家-723.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-207.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.6KB/s(Youtube:不良林)
-      - 柬埔寨-3.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-455.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-465.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
       - 🇬🇧 英国-4.26MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-723.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-207.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.6KB/s(Youtube:不良林)
-      - 柬埔寨-3.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-455.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-465.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
       - 🇬🇧 英国-4.26MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 未知国家-723.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-207.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.6KB/s(Youtube:不良林)
-      - 柬埔寨-3.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-455.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-465.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
       - 🇬🇧 英国-4.26MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 未知国家-723.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-207.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.6KB/s(Youtube:不良林)
-      - 柬埔寨-3.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-455.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-465.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
       - 🇬🇧 英国-4.26MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-723.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-207.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.6KB/s(Youtube:不良林)
-      - 柬埔寨-3.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-455.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-465.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
       - 🇬🇧 英国-4.26MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-723.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-207.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.6KB/s(Youtube:不良林)
-      - 柬埔寨-3.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-455.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-465.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
       - 🇬🇧 英国-4.26MB/s(Youtube:不良林)
