--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-5.55MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.67MB/s(Youtube:不良林), server: hk10.bp777.buzz, port: 21665, type: vmess, uuid: 9caba741-5aab-431b-beeb-db2d6e297e13, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk10.bp777.buzz}}
-  - {name: 🇭🇰 (已存活10天)香港-3.72MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇮🇳 印度-917.0KB/s(Youtube:不良林), server: in-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-01.licom.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-2.24MB/s(Youtube:不良林), server: 146.56.110.129, port: 26396, type: vmess, uuid: f4baed1c-ab86-4b70-caa3-df853467e1bd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 未知国家-869.0KB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-14.72MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-869.0KB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-217.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇫🇷 法国-2.08MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇨🇦 加拿大-3.03MB/s(Youtube:不良林), server: 134.195.196.89, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 134.195.196.89, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-3.02MB/s(Youtube:不良林), server: 134.195.196.89, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-3.03MB/s(Youtube:不良林) 2, server: 134.195.196.89, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-3.72MB/s(Youtube:不良林)
-      - 🇮🇳 印度-917.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.24MB/s(Youtube:不良林)
-      - 未知国家-869.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.72MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-869.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-3.72MB/s(Youtube:不良林)
-      - 🇮🇳 印度-917.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.24MB/s(Youtube:不良林)
-      - 未知国家-869.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.72MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-869.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-3.72MB/s(Youtube:不良林)
-      - 🇮🇳 印度-917.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.24MB/s(Youtube:不良林)
-      - 未知国家-869.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.72MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-869.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活10天)香港-3.72MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-3.72MB/s(Youtube:不良林)
-      - 🇮🇳 印度-917.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.24MB/s(Youtube:不良林)
-      - 未知国家-869.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.72MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-869.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-3.72MB/s(Youtube:不良林)
-      - 🇮🇳 印度-917.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.24MB/s(Youtube:不良林)
-      - 未知国家-869.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.72MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-869.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-3.72MB/s(Youtube:不良林)
-      - 🇮🇳 印度-917.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.24MB/s(Youtube:不良林)
-      - 未知国家-869.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.72MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-869.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-3.72MB/s(Youtube:不良林)
-      - 🇮🇳 印度-917.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.24MB/s(Youtube:不良林)
-      - 未知国家-869.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.72MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-869.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
